@@ -3,7 +3,6 @@ package nl.inl.blacklab.codec;
 import java.util.ArrayList;
 import java.util.Collection;
 import java.util.List;
-import java.util.stream.Collectors;
 
 /**
  * Quickly look up a segment an id occurs in.
@@ -30,7 +29,7 @@ public class SegmentLookup<T> {
 
     public SegmentLookup(Collection<T> segments, SegmentBaseLookup<T> lookup) {
         this.segments = new ArrayList<>(segments);
-        ids = segments.stream().map(lookup::base).collect(Collectors.toList());
+        ids = segments.stream().map(lookup::base).toList();
     }
 
     /**
